--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ LANGFLOW_CONFIG_DIR=
 # This means that the database will be deleted when Langflow is uninstalled
 # and that the database will not be shared between different virtual environments
 # Example: LANGFLOW_SAVE_DB_IN_CONFIG_DIR=true
-LANGFLOW_SAVE_DB_IN_CONFIG_DIR=
+LANGFLOW_SAVE_DB_IN_CONFIG_DIR=true
 
 # Database URL
 # Postgres example: LANGFLOW_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/langflow
@@ -37,11 +37,11 @@ LANGFLOW_HOST=
 
 # Worker processes
 # Example: LANGFLOW_WORKERS=1
-LANGFLOW_WORKERS=
+LANGFLOW_WORKERS=1
 
 # Server port
 # Example: LANGFLOW_PORT=7860
-LANGFLOW_PORT=
+LANGFLOW_PORT=7866
 
 # Logging level
 # Example: LANGFLOW_LOG_LEVEL=critical
@@ -58,12 +58,12 @@ LANGFLOW_FRONTEND_PATH=
 # Whether to open the browser after starting the server
 # Values: true, false
 # Example: LANGFLOW_OPEN_BROWSER=true
-LANGFLOW_OPEN_BROWSER=
+LANGFLOW_OPEN_BROWSER=false
 
 # Whether to remove API keys from the projects saved in the database
 # Values: true, false
 # Example: LANGFLOW_REMOVE_API_KEYS=false
-LANGFLOW_REMOVE_API_KEYS=
+LANGFLOW_REMOVE_API_KEYS=false
 
 # Whether to use RedisCache or ThreadingInMemoryCache or AsyncInMemoryCache
 # Values: async, memory, redis
@@ -73,7 +73,7 @@ LANGFLOW_REMOVE_API_KEYS=
 # LANGFLOW_REDIS_PORT (default: 6379)
 # LANGFLOW_REDIS_DB (default: 0)
 # LANGFLOW_REDIS_CACHE_EXPIRE (default: 3600)
-LANGFLOW_CACHE_TYPE=
+LANGFLOW_CACHE_TYPE=AsyncInMemoryCache
 
 # Set AUTO_LOGIN to false if you want to disable auto login
 # and use the login form to login. LANGFLOW_SUPERUSER and LANGFLOW_SUPERUSER_PASSWORD
@@ -91,7 +91,7 @@ LANGFLOW_SUPERUSER_PASSWORD=
 
 # Should store environment variables in the database
 # Values: true, false
-LANGFLOW_STORE_ENVIRONMENT_VARIABLES=
+LANGFLOW_STORE_ENVIRONMENT_VARIABLES=false
 
 # STORE_URL
 # Example: LANGFLOW_STORE_URL=https://api.langflow.store
